blog/kube/addit/postgresqlKube.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec: 
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    purpose: database
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:latest
