blog/kube/addit/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: lvh.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: blog-service
              servicePort: 3000
